k8s/src/resources/meal-planner/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meal-planner
spec:
  replicas: 2
  selector:
    matchLabels: {}
  template:
    metadata:
      labels: {}
    spec:
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app: meal-planner
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: meal-planner
          image: ghcr.io/brandonmartinez/meal-planner:latest
          ports:
            - name: http
              containerPort: 3001
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
